--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ body {
 }
 
 .flex {
-    background         : linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.9) 100%), url(/images/background.jpg);
+    background         : linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.9) 100%), url(../images/background.jpg);
     background-size    : cover;
     background-position: center;
     height             : 100vh;
