--- a/css/animations.css
+++ b/css/animations.css
@@ -133,3 +133,57 @@
 .description {
     animation-name: slideUp;
 }
+
+.name {
+    animation-delay: 100ms;
+}
+
+.job {
+    animation-delay: 200ms;
+}
+
+.hr {
+    animation-delay: 300ms;
+}
+
+.description {
+    animation-delay: 400ms;
+}
+
+.picture-image {
+    animation-delay: 500ms;
+}
+
+.picture-shadow {
+    animation-delay: 500ms;
+}
+
+.contact {
+    animation-delay: 600ms;
+}
+
+.social li {
+    animation-duration       : 500ms;
+    animation-name           : slideUp;
+    animation-timing-function: cubic-bezier(0.5, 0, 0.5, 1.5);
+}
+
+.social li:nth-child(1) {
+    animation-delay: 800ms;
+}
+
+.social li:nth-child(2) {
+    animation-delay: 900ms;
+}
+
+.social li:nth-child(3) {
+    animation-delay: 1s;
+}
+
+.social li:nth-child(4) {
+    animation-delay: 1.1s;
+}
+
+.social li:nth-child(5) {
+    animation-delay: 1.2s;
+}
