--- a/css/animations.css
+++ b/css/animations.css
@@ -95,6 +95,13 @@
     animation-fill-mode      : both;
 }
 
+/*
+.wallpaper,
+.picture-shadow,
+.picture-image {
+    opacity: 0;
+}*/
+
 .contact {
     animation-name: bounceIn;
 }
@@ -106,15 +113,19 @@
 }
 
 .wallpaper {
-    animation-name           : zoomOut;
     animation-timing-function: ease-out;
 }
 
-.picture-shadow {
+.wallpaper.is-loaded {
+    animation-delay: 1s;
+    animation-name : zoomOut;
+}
+
+.picture.is-loaded .picture-shadow {
     animation-name: picShadow;
 }
 
-.picture-image {
+.picture.is-loaded .picture-image {
     animation-name: picImage;
 }
 
