--- a/css/main.css
+++ b/css/main.css
@@ -56,7 +56,7 @@ a {
 
 /* 3. Specific */
 .wallpaper {
-    background-image   : url("../images/austria.jpg");
+    background-image   : url("../images/background.jpg");
     background-position: center;
     background-size    : cover;
     opacity            : 0.2;
